2008-07-18  Joseph Myers  <joseph@codesourcery.com>

	* bfd-in.h (bfd_elf32_arm_set_target_relocs): Add new parameter.
	* bfd-in2.h: Regenerate.
	* elf32-arm.c (struct elf_arm_obj_tdata): Add field
	no_wchar_size_warning.
	(bfd_elf32_arm_set_target_relocs): Add new parameter
	no_wchar_warn.
	(elf32_arm_merge_eabi_attributes): Give a warning, not an error,
	for conflicting wchar_t attributes.  Do not warn if
	--no-wchar-size-warning.  Make diagnostic text more specific.

2008-07-18  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/6748
	* elf32-arm.c (elf32_arm_link_hash_table_create): Initialize
	new fields added for ARM long call support.

2008-07-18  Danny Backx  <dannybackx@users.sourceforge.net>

	* pe-arm-wince.c (pe_print_compressed_pdata): Define new function to
	print compressed pdata structure as described on MSDN. This only
	applies to a limited set of architectures (ARM, SH4).
	(slurp_symtab, my_symbol_for_address): Define static helper
	functions for pe_print_compressed_pdata.
	* coffcode.h (bfd_coff_backend_data): Add _bfd_coff_print_pdata field.
	(bfd_coff_have_print_pdata, bfd_coff_print_pdata): Define.
	* bfd/peXXigen.c (_bfd_XX_print_private_bfd_data_common): Add check on
	bfd_coff_backend_data, call the function if non-null.
	* pei-mcore.c: Add target dependent initialisation for
	bfd_coff_backend_data.
	* coff-sh.c: Likewise.
	* coff64-rs6000.c: Likewise.
	* coff-rs6000.c: Likewise.
	* libcoff-in.h: Likewise.
	* cf-i386lynx.c: Likewise.
	* coff-alpha.c: Likewise.
	* coff-apollo.c: Likewise.
	* coff-arm.c: Likewise.
	* coff-aux.c: Likewise.
	* coff-h8300.c: Likewise.
	* coff-h8500.c: Likewise.
	* coff-i386.c: Likewise.
	* coff-i860.c: Likewise.
	* coff-i960.c: Likewise.
	* coff-ia64.c: Likewise.
	* coff-m68k.c: Likewise.
	* coff-m88k.c: Likewise.
	* coff-maxq.c: Likewise.
	* coff-mips.c: Likewise.
	* coff-or32.c: Likewise.
	* coff-sparc.c: Likewise.
	* coff-tic30.c: Likewise.
	* coff-tic4x.c: Likewise.
	* coff-tic54x.c: Likewise.
	* coff-tic80.c: Likewise.